Diakonos Changelog
------------------

0.8.12

Contributors: Pistos

- Refactored keying system.
- Introduced keying modes.
- Ruby version now enforced, both at installation and run time.
- Input line can now scroll if input is longer than screen width.
- Added support for session completion in zsh and bash.
- Added select_line.
- Added select_wrapping_block.
- Various refactorings.
- Various bug fixes.

0.8.11

Contributors: Pistos, dominikh

- Added join_lines_upward (Alt-Shift-J).
- Added one-key selection in buffer list.
- Added support for single line indentation.
- Added extension system.
- Added surround_selection and related functions.
- Added "about" page.
- Various bug fixes and refactorings.

0.8.10

Contributors: Pistos, dominikh

- Ruby version 1.9+ now required.  (Ruby 1.8 support dropped)
- Added go_to_char (Alt-N).
- Added go_to_char_previous (Alt-P).
- shell command now shows executed command on interaction line.
- shell command is now interruptible.
- Klipper synchronization now a single setting (clipboard.external klipper).
- Added xclip support.
- Cursor and viewport positions now saved in and restored from sessions.
- Current buffer number now saved in sessions.
- Fixed context line.
- Textual indication of no shell results now given.
- Added basic pair (bracket) highlighting.
- Added go_to_pair_match (Alt-Shift-[).
- Fixed chmodding in installer.
- Undo and redo now actually compare file contents to set "modified" flag.
- Added support for a special 'all' language, whose formats apply no matter the current language.
- Added dynamic prefix expansion (Alt-E).

0.8.9

Contributors: Pistos, Decklin Foster

- Put interaction timer only on first stale session prompt, not any after that.
- Changed all function names from camelCase to snake_case.
- Added --help-dir switch to installer.
- Fixed some issues with installer.
- Changed delete_to_and_from to always assume given character is the left side character when matching pairs.